test/tests/compiler/18_structures/invalid_types/invalid_struct_declaration/duplicate_member_name.plx
type struc s(    #  can't declare two members with same name
    x: i32    , x: f64    
    )
